testing desc. changes

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: John Doe # your name (or website title) here
+title: Jason A. Dayuha # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  Hello, this is a test of my discription.
   <br><br>
-  Second description 
+  Testing what to put in this discription. hello how are you? 
   <br><br>
   <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
   
