--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,8 @@
 title: Jason A. Dayuha # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
- * Mechanical Engineering Degree
- 
- * Google Data Analytics Certification from Cursera 
- 
+ * Mechanical Engineering Degree <br>
+ * Google Data Analytics Certification from Cursera <br>
  * Excel, R Programing , SQLite, and Tableau. 
   <br><br>
  
