--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 title: Jason A. Dayuha # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
- * Mechanical Engineering Degree <br>
  * Google Data Analytics Certification from Cursera <br>
+ * BS Mechanical Engineering Degree from Univerisity of Hawaii Manoa <br>
  * Excel, R Programing , SQLite, and Tableau. 
-  <br><br>
+  <br>
  
   <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
   
