--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Jason A. Dayuha # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
- * Google Data Analytics Certification from Cursera <br>
+ * Google Data Analytics Certification from Coursera <br>
  * BS Mechanical Engineering University of Hawaii Manoa <br>
  * Excel, R Programing , SQLite, and Tableau. 
   <br>
