--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Jason A. Dayuha # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
- * Google Data Analytics Certification from Coursera <br>
- * BS Mechanical Engineering University of Hawaii Manoa <br>
- * Excel, R Programing , SQLite, and Tableau. 
+ * Google Data Analytics Certification from Coursera  <br>
+ * BS Mechanical Engineering <br>
+ * Excel,R Programing, SQLite, Tableau
   <br>
  
   <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
