--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,14 @@ description: > # your text below (remove <br> elements if you don't need line br
  * Google Data Analytics Certification from Coursera  <br>
  * BS Mechanical Engineering <br>
  * Excel, R Programing, SQLite, Tableau <br>
-As a Google Data Analytics Certified professional with a Bachelor's degree in Mechanical Engineering, I possess a unique blend of technical and analytical skills. My proficiency in Excel, R Programming, SQLite, and Tableau enables me to seamlessly navigate through data, uncover insights, and deliver impactful visualizations. This fusion of engineering fundamentals and advanced data analytics expertise makes me a versatile asset in any data-driven decision-making scenario.
-  <br> <br>
+As a Google Data Analytics Certified professional with a Bachelors 
+degree in Mechanical Engineering, I possess a unique blend of technical 
+and analytical skills. My proficiency in Excel, R Programming, SQLite, 
+and Tableau enables me to seamlessly navigate through data, uncover insights,
+and deliver impactful visualizations. This fusion of engineering 
+fundamentals and advanced data analytics expertise makes me a versatile 
+asset in any data-driven decision-making scenario.
+ 
  
   <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
   
