--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 title: Jason A. Dayuha
 logo: "/images/logo1.png"
 description: >
-  Google Data Analytics Certification from Coursera.
-  BS Mechanical Engineering.
-  Proficient in Excel, R Programming, SQLite, and Tableau.
+  *  Google Data Analytics Certification from Coursera. <br>
+  *  BS Mechanical Engineering. <br>
+  *  Proficient in Excel, R Programming, SQLite, and Tableau. <br>
 
-  As a Google Data Analytics Certified professional with a Bachelor's degree in Mechanical Engineering, I possess a unique blend of technical and analytical skills. My proficiency in Excel, R Programming, SQLite, and Tableau enables me to seamlessly navigate through data, uncover insights, and deliver impactful visualizations.
+  As a Google Data Analytics Certified professional with a Bachelor's degree in Mechanical Engineering, I possess a unique blend of technical and analytical skills. My proficiency in Excel, R Programming, SQLite, and Tableau enables me to seamlessly navigate through data, uncover insights, and deliver impactful visualizations. <br>
   
   View My LinkedIn Profile: [LinkedIn](https://www.linkedin.com/in/example/)
 
